[MacViews] Invalidate shadow when animating find bar

The macOS WindowServer calculates a window's shadow based on the
contents' alpha channel. This means the shadow needs to be invalidated
every time the contents change.

However, windows owned by a DropdownBarHost animate their contents in
and out using a Views SlideAnimation the progress of which can't be
directly tracked by BridgedNativeWidget, which is usually responsibnle
for updating the shadow. This is in contrast to, for example, the modal
window animation, which is an NSAnimation owned by BridgedNativeWidget.

As a result, there is a race condition where the last shadow invalidation
happens either before the show animation ticks (result: no shadow) or
partially through the animation (result: only a partial shadow, since
it was generated before the view was in its final position).

Rather than plumbing through, this change introduces a Mac-only code
path in DropdownBarHost to invalidate the shadow on animation progress.

Bug: 646734
Change-Id: Id130e175001a80862c2428d99e7c1404e9deffa6